src/layout/tests/snapshots/niri__layout__tests__golden__golden_p3_resize_tile_bottom_edge.snap
---
source: src/layout/tests/golden.rs
expression: "snapshot([Op::AddOutput(1), win(1), win(2), consume_left(), Op::FocusWindowUp,\nOp::InteractiveResizeBegin { window: 1, edges: ResizeEdge::BOTTOM },\nOp::InteractiveResizeUpdate { window: 1, dx: 0., dy: 50. },\nOp::InteractiveResizeEnd { window: 1 },])"
---
columns:
  - x: 0
    width: 100
    tiles:
      - x: 0
        y: 16
        width: 100
        height: 200
      - x: 0
        y: 232
        width: 100
        height: 200
    active_tile_idx: 0
    is_full_width: false
    is_fullscreen: false
active_column_idx: 0
view_offset: -16
working_area:
  x: 0
  y: 0
  w: 1280
  h: 720
view_size:
  w: 1280
  h: 720
